tests/offload/networkpolicy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networkpolicy
  labels:
    env: networkpolicy
