tests/offload/networkpolicy/networkpolicy-deny-by-default.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
  namespace: networkpolicy
spec:
  podSelector:
  ingress: []
