tests/offload/networkpolicy/pod-client.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: clientpod-networkpolicy-worker-24
spec:
  nodeSelector:
    kubernetes.io/hostname: worker-advnetlab24
  containers:
  - name: appcntr1
    image: quay.io/zshi/centos:httpd-iperf
    imagePullPolicy: IfNotPresent
