tests/offload/networkpolicy/pod-networkpolicy.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: testpod-networkpolicy-worker-24
  namespace: networkpolicy
spec:
  nodeSelector:
    kubernetes.io/hostname: worker-advnetlab24
  containers:
  - name: appcntr1
    image: quay.io/zshi/centos:httpd-iperf
    imagePullPolicy: IfNotPresent
